# UltimateSystemForCardVerificationSSPU

./: .gitignore  FASTAPI_MIGRATION.md  MIGRATION_GUIDE.md  Makefile  PROJECT_SUMMARY.md  README.md  SETUP.md  manage.py  pyproject.toml  requirements.txt  run.py  setup.cfg  setup.py
src/: assets.py  auth_utils.py  config.py  database.py  decorators.py  main.py  schemas.py  settings.py  util.py
src/auth/: forms.py  views.py
src/data/: base.py  database.py
src/data/models/: user.py
src/routers/: auth.py  auth_views.py  public_views.py
src/templates/auth/: login.tmpl
src/templates/public/: index.tmpl
src/templates/shared/: _navbar.tmpl  layout.tmpl
test/: conftest.py  test_fastapi_auth.py  test_fastapi_schemas.py  test_fastapi_utils.py
