[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ultimate-card-verification-system"
version = "2.0.0"
description = "Ultimate System for Card Verification - SSPU"
readme = "README.md"
requires-python = ">=3.8"
license = {text = "MIT"}
authors = [
    {name = "Adam Burdik", email = "adam@example.com"}
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Framework :: Flask",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]

dependencies = [
    "flask>=3.0.0",
    "flask-assets>=2.1.0",
    "flask-bcrypt>=1.0.0",
    "flask-login>=0.6.3",
    "flask-mail>=0.9.1",
    "flask-migrate>=4.0.0",
    "flask-wtf>=1.2.0",
    "Werkzeug>=3.0.0",
    "cssmin>=0.2.0",
    "libsass>=0.23.0",
    "alembic>=1.13.0",
    "sqlalchemy>=2.0.0",
    "pymysql>=1.1.0",
    "simplejson>=3.19.0",
    "xmltodict>=0.13.0",
    "WTForms>=3.1.0",
    "WTForms-Components>=0.10.5",
    "paho-mqtt>=1.6.0",
    "python-socketio>=5.10.0",
    "flask-socketio>=5.3.0",
    "gunicorn>=21.2.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "webtest>=3.0.0",
    "pycodestyle>=2.11.0",
    "pylint>=3.0.0",
]

[project.urls]
Homepage = "https://github.com/AdamBurdik/UltimateSystemForCardVerificationSSPU"
Repository = "https://github.com/AdamBurdik/UltimateSystemForCardVerificationSSPU"

[tool.setuptools]
packages = ["src"]

[tool.pytest.ini_options]
testpaths = ["test"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]

[tool.pycodestyle]
ignore = ["E221", "E251", "E301", "E302", "E303", "E711"]
max-line-length = 120

[tool.pylint.messages_control]
disable = [
    "missing-module-docstring",
    "missing-class-docstring",
    "missing-function-docstring",
]

[tool.pylint.format]
max-line-length = 120
